--- a/package.json
+++ b/package.json
@@ -10,12 +10,20 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.3.1",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
-    "next": "13.4.10",
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.3.4",
+    "next": "^13.4.10",
+    "nodemailer": "^6.9.3",
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "styled-components": "^6.0.4",
     "tailwindcss": "3.3.3"
   }
 }
